--- a/index-new-themes.html
+++ b/index-new-themes.html
@@ -256,12 +256,13 @@
         ".dc-chart strong, .y-label,.dc-legend-item, .dc-data-table": {
             fill: "black",
             color: "black"
-        }
+        },
+        ".dc-table-section td": { 'backgroundColor': "white" }
         
     }
         
 
-        const themes = {'default':default_theme,'dark': dark_theme}
+    const themes = {'default':default_theme,'dark': dark_theme}
 
 
 </script>
