--- a/index-new-themes.html
+++ b/index-new-themes.html
@@ -257,7 +257,7 @@
             fill: "black",
             color: "black"
         },
-        ".dc-table-section td": { 'backgroundColor': "white" }
+        ".dc-table-section td": { 'backgroundColor': "#d9edf7" }
         
     }
         
